# swagger.yaml
@@ -26,6 +26,8 @@ tags:
     description:
   - name: search
     description:
+  - name: payment
+    description:
   - name: omise
     description:
 # schemes:
@@ -539,6 +541,34 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Search'
+  /payments:
+    put:
+      tags:
+        - payment
+      security:
+        - api_key: [ ]
+      parameters:
+        - in: body
+          name: body
+          schema:
+            type: object
+            properties:
+              courseId:
+                type: string
+              amount:
+                type: number
+              scheduleDate:
+                type: string
+              scheduleHour:
+                type: number
+            example:
+              courseId: 62f1241aec23586e18f4234f
+              price: 110
+              scheduleDate: 20220818
+              scheduleHour: 1
+      responses:
+        200:
+          description: success
   /omise/promptpay/qrcode:
     post:
       tags:
